--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="apple-mobile-web-app-title" content="Roseflix">
-  <meta name="application-name" content="Roseflix">
+  <meta name="apple-mobile-web-app-title" content="SVFlix">
+  <meta name="application-name" content="SVFlix">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <meta name="description" content="A showcase project based on Netflix. This was built with React by Rose Bilag." />
+  <meta name="description" content="A showcase project based on Netflix." />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -19,7 +19,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
-  <title>Roseflix</title>
+  <title>SVFlix</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
